--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -104,6 +104,8 @@
   "@agree": {},
   "agree_and_continue": "Agree and continue",
   "@agree_and_continue": {},
+  "agreed_invitation_cannot_invite_again": "",
+  "@agreed_invitation_cannot_invite_again": {},
   "all": "전부",
   "@all": {},
   "all_bug": "전부 매입",
