update rp translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -574,6 +574,8 @@
   "@depth_decimal_places": {},
   "description": "Description",
   "@description": {},
+  "description_has_gap": "",
+  "@description_has_gap": {},
   "detail": "Details",
   "@detail": {},
   "detail_create_map3": "{remain}HYN are required to initiate a node，why not invite your friends to join~",
@@ -1244,6 +1246,8 @@
   "@join_map_node_must_have_block_account": {},
   "kais_talk": "Kai's Talk",
   "@kais_talk": {},
+  "key_accept": "",
+  "@key_accept": {},
   "key_manager_title": "My encrypted addr.",
   "@key_manager_title": {},
   "key_pair_error_share_location_again": "Keypair error, please re-share location",
