--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -574,6 +574,8 @@
   "@depth_decimal_places": {},
   "description": "Description",
   "@description": {},
+  "description_has_gap": "",
+  "@description_has_gap": {},
   "detail": "상세",
   "@detail": {},
   "detail_create_map3": "{remain}HYN are required to initiate a node，why not invite your friends to join~",
@@ -1244,6 +1246,8 @@
   "@join_map_node_must_have_block_account": {},
   "kais_talk": " CEO 얘기",
   "@kais_talk": {},
+  "key_accept": "",
+  "@key_accept": {},
   "key_manager_title": "암호화된 주소",
   "@key_manager_title": {},
   "key_pair_error_share_location_again": "암호키 오류가 발생했습니다.위치 정보 공유 조작을 다시 진행하십시요.",
