--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -574,6 +574,8 @@
   "@depth_decimal_places": {},
   "description": "描述",
   "@description": {},
+  "description_has_gap": "描   述",
+  "@description_has_gap": {},
   "detail": "详情",
   "@detail": {},
   "detail_create_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
@@ -1210,7 +1212,7 @@
   "@invitation_success": {},
   "invite_friend_join": "邀请好友\n参加",
   "@invite_friend_join": {},
-  "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否同意?",
+  "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否接受邀请?",
   "@invite_friend_receive_pocket_agree": {},
   "invite_friends": "邀请好友",
   "@invite_friends": {},
@@ -1244,6 +1246,8 @@
   "@join_map_node_must_have_block_account": {},
   "kais_talk": "凯氏物语",
   "@kais_talk": {},
+  "key_accept": "接受",
+  "@key_accept": {},
   "key_manager_title": "我的加密地址",
   "@key_manager_title": {},
   "key_pair_error_share_location_again": "密钥对异常，请重新进行位置分享操作",
