--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -574,6 +574,8 @@
   "@depth_decimal_places": {},
   "description": "描述",
   "@description": {},
+  "description_has_gap": "",
+  "@description_has_gap": {},
   "detail": "詳情",
   "@detail": {},
   "detail_create_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
@@ -1244,6 +1246,8 @@
   "@join_map_node_must_have_block_account": {},
   "kais_talk": "凱氏物語",
   "@kais_talk": {},
+  "key_accept": "",
+  "@key_accept": {},
   "key_manager_title": "我的加密地址",
   "@key_manager_title": {},
   "key_pair_error_share_location_again": "密鑰對異常，請重新進行位置分享操作",
