add error translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -118,6 +118,8 @@
   "@already_collected_hint": {},
   "already_imported_hint": "already imported",
   "@already_imported_hint": {},
+  "already_your_friend_cannot_be_referrer": "",
+  "@already_your_friend_cannot_be_referrer": {},
   "amazon_cloud": "Amazon Cloud",
   "@amazon_cloud": {},
   "amount": "Amount",
@@ -2220,6 +2222,10 @@
   "@route": {},
   "rp_airdrop": "",
   "@rp_airdrop": {},
+  "rp_already_stake": "",
+  "@rp_already_stake": {},
+  "rp_amount_unit": "",
+  "@rp_amount_unit": {},
   "rp_available_soon": "",
   "@rp_available_soon": {},
   "rp_balance": "",
@@ -2244,12 +2250,18 @@
   "@rp_invite_me": {},
   "rp_invite_to_collect": "",
   "@rp_invite_to_collect": {},
+  "rp_million_rp": "",
+  "@rp_million_rp": {},
   "rp_missed": "",
   "@rp_missed": {},
   "rp_my_hyn_staking": "",
   "@rp_my_hyn_staking": {},
   "rp_my_invite_list": "",
   "@rp_my_invite_list": {},
+  "rp_my_total_transmit": "",
+  "@rp_my_total_transmit": {},
+  "rp_my_yesterday_transmit": "",
+  "@rp_my_yesterday_transmit": {},
   "rp_not_airdrop_1": "not",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "airdrop",
@@ -2258,10 +2270,20 @@
   "@rp_not_airdrop_3": {},
   "rp_project_intro": "",
   "@rp_project_intro": {},
+  "rp_retrive_hyn": "",
+  "@rp_retrive_hyn": {},
   "rp_today_rp": "",
   "@rp_today_rp": {},
   "rp_total_amount_percent": "总量{percent}万RP",
   "@rp_total_amount_percent": {},
+  "rp_total_available_transmit": "",
+  "@rp_total_available_transmit": {},
+  "rp_transmit_desc_1": "当前每份（{hynPerRP} HYN）总共可传导出 ",
+  "@rp_transmit_desc_1": {},
+  "rp_transmit_desc_2": " RP，分{releaseDay}天释放。{stakingDay}天后可取回已抵押的HYN。",
+  "@rp_transmit_desc_2": {},
+  "rp_transmit_detail": "",
+  "@rp_transmit_detail": {},
   "rp_transmit_pool": "",
   "@rp_transmit_pool": {},
   "rp_transmit_yesterday": "",
