--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -118,6 +118,8 @@
   "@already_collected_hint": {},
   "already_imported_hint": "已导入",
   "@already_imported_hint": {},
+  "already_your_friend_cannot_be_referrer": "对方已经是你的好友，不能成为你的推荐人",
+  "@already_your_friend_cannot_be_referrer": {},
   "amazon_cloud": "亚马逊云",
   "@amazon_cloud": {},
   "amount": "金额",
@@ -2220,6 +2222,10 @@
   "@route": {},
   "rp_airdrop": "红包空投",
   "@rp_airdrop": {},
+  "rp_already_stake": "已抵押",
+  "@rp_already_stake": {},
+  "rp_amount_unit": "份",
+  "@rp_amount_unit": {},
   "rp_available_soon": "即将上线",
   "@rp_available_soon": {},
   "rp_balance": "余额",
@@ -2244,12 +2250,18 @@
   "@rp_invite_me": {},
   "rp_invite_to_collect": "邀请好友一起领红包",
   "@rp_invite_to_collect": {},
+  "rp_million_rp": "万RP",
+  "@rp_million_rp": {},
   "rp_missed": "我错过的",
   "@rp_missed": {},
   "rp_my_hyn_staking": "我的抵押",
   "@rp_my_hyn_staking": {},
   "rp_my_invite_list": "我邀请的好友",
   "@rp_my_invite_list": {},
+  "rp_my_total_transmit": "我累计获得",
+  "@rp_my_total_transmit": {},
+  "rp_my_yesterday_transmit": "我昨日获得",
+  "@rp_my_yesterday_transmit": {},
   "rp_not_airdrop_1": "未",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "空",
@@ -2258,10 +2270,20 @@
   "@rp_not_airdrop_3": {},
   "rp_project_intro": "项目简介",
   "@rp_project_intro": {},
+  "rp_retrive_hyn": "",
+  "@rp_retrive_hyn": {},
   "rp_today_rp": "今日红包",
   "@rp_today_rp": {},
   "rp_total_amount_percent": "总量{percent}万RP",
   "@rp_total_amount_percent": {},
+  "rp_total_available_transmit": "总可传导",
+  "@rp_total_available_transmit": {},
+  "rp_transmit_desc_1": "当前每份（{hynPerRP} HYN）总共可传导出 ",
+  "@rp_transmit_desc_1": {},
+  "rp_transmit_desc_2": " RP，分{releaseDay}天释放。{stakingDay}天后可取回已抵押的HYN。",
+  "@rp_transmit_desc_2": {},
+  "rp_transmit_detail": "传导明细",
+  "@rp_transmit_detail": {},
   "rp_transmit_pool": "传导池",
   "@rp_transmit_pool": {},
   "rp_transmit_yesterday": "昨日获得",
