--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -118,6 +118,8 @@
   "@already_collected_hint": {},
   "already_imported_hint": "불러오기",
   "@already_imported_hint": {},
+  "already_your_friend_cannot_be_referrer": "",
+  "@already_your_friend_cannot_be_referrer": {},
   "amazon_cloud": "Amazon Cloud",
   "@amazon_cloud": {},
   "amount": "금액",
@@ -574,6 +576,8 @@
   "@depth_decimal_places": {},
   "description": "Description",
   "@description": {},
+  "description_has_gap": "",
+  "@description_has_gap": {},
   "detail": "상세",
   "@detail": {},
   "detail_create_map3": "{remain}HYN are required to initiate a node，why not invite your friends to join~",
@@ -1244,6 +1248,8 @@
   "@join_map_node_must_have_block_account": {},
   "kais_talk": " CEO 얘기",
   "@kais_talk": {},
+  "key_accept": "",
+  "@key_accept": {},
   "key_manager_title": "암호화된 주소",
   "@key_manager_title": {},
   "key_pair_error_share_location_again": "암호키 오류가 발생했습니다.위치 정보 공유 조작을 다시 진행하십시요.",
@@ -2216,10 +2222,16 @@
   "@route": {},
   "rp_airdrop": "",
   "@rp_airdrop": {},
+  "rp_already_stake": "",
+  "@rp_already_stake": {},
+  "rp_amount_unit": "",
+  "@rp_amount_unit": {},
   "rp_available_soon": "",
   "@rp_available_soon": {},
   "rp_balance": "",
   "@rp_balance": {},
+  "rp_check_staking_tx": "",
+  "@rp_check_staking_tx": {},
   "rp_desc_1": "",
   "@rp_desc_1": {},
   "rp_desc_2": "",
@@ -2228,6 +2240,8 @@
   "@rp_desc_3": {},
   "rp_desc_4": "",
   "@rp_desc_4": {},
+  "rp_empty_staking_record": "",
+  "@rp_empty_staking_record": {},
   "rp_friends": "",
   "@rp_friends": {},
   "rp_global_hyn_staking": "",
@@ -2236,32 +2250,104 @@
   "@rp_global_transmit": {},
   "rp_hrc30": "",
   "@rp_hrc30": {},
+  "rp_hyn_can_retrieved": "",
+  "@rp_hyn_can_retrieved": {},
+  "rp_hyn_locked_hint": "注：你的HYN抵押将锁定{stakingDay}天，满期后可自行取回",
+  "@rp_hyn_locked_hint": {},
+  "rp_input_staking_amount": "",
+  "@rp_input_staking_amount": {},
+  "rp_input_staking_amount_with_hyn": "输入抵押份数，每份{hynPerRp} HYN",
+  "@rp_input_staking_amount_with_hyn": {},
   "rp_invite_me": "",
   "@rp_invite_me": {},
   "rp_invite_to_collect": "",
   "@rp_invite_to_collect": {},
+  "rp_million_rp": "",
+  "@rp_million_rp": {},
   "rp_missed": "",
   "@rp_missed": {},
   "rp_my_hyn_staking": "",
   "@rp_my_hyn_staking": {},
   "rp_my_invite_list": "",
   "@rp_my_invite_list": {},
+  "rp_my_total_transmit": "",
+  "@rp_my_total_transmit": {},
+  "rp_my_yesterday_transmit": "",
+  "@rp_my_yesterday_transmit": {},
   "rp_not_airdrop_1": "",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "",
   "@rp_not_airdrop_2": {},
   "rp_not_airdrop_3": "",
   "@rp_not_airdrop_3": {},
+  "rp_not_enough_hyn": "",
+  "@rp_not_enough_hyn": {},
+  "rp_no_valid_contract": "",
+  "@rp_no_valid_contract": {},
   "rp_project_intro": "",
   "@rp_project_intro": {},
+  "rp_retrieve_all_staking": "",
+  "@rp_retrieve_all_staking": {},
+  "rp_retrieve_all_staking_confirm": "当前满期HYN有{count} 笔，总共 {hynSum} HYN，你将发起提回抵押操作，确定继续吗？",
+  "@rp_retrieve_all_staking_confirm": {},
+  "rp_retrieve_staking_request_success": "",
+  "@rp_retrieve_staking_request_success": {},
+  "rp_retrive_hyn": "",
+  "@rp_retrive_hyn": {},
+  "rp_stake": "",
+  "@rp_stake": {},
+  "rp_stake_hyn": "",
+  "@rp_stake_hyn": {},
+  "rp_staking_amount": "",
+  "@rp_staking_amount": {},
+  "rp_staking_days": "第 {day} 天",
+  "@rp_staking_days": {},
+  "rp_staking_detail": "",
+  "@rp_staking_detail": {},
+  "rp_staking_end_time": "",
+  "@rp_staking_end_time": {},
+  "rp_staking_id": "",
+  "@rp_staking_id": {},
+  "rp_staking_start_time": "",
+  "@rp_staking_start_time": {},
+  "rp_staking_state_1": "",
+  "@rp_staking_state_1": {},
+  "rp_staking_state_2": "",
+  "@rp_staking_state_2": {},
+  "rp_staking_state_3": "",
+  "@rp_staking_state_3": {},
+  "rp_staking_state_4": "",
+  "@rp_staking_state_4": {},
+  "rp_staking_state_5": "",
+  "@rp_staking_state_5": {},
+  "rp_staking_state_6": "",
+  "@rp_staking_state_6": {},
+  "rp_staking_state_7": "",
+  "@rp_staking_state_7": {},
+  "rp_staking_state_8": "",
+  "@rp_staking_state_8": {},
   "rp_today_rp": "",
   "@rp_today_rp": {},
   "rp_total_amount_percent": "总量{percent}万RP",
   "@rp_total_amount_percent": {},
+  "rp_total_available_transmit": "",
+  "@rp_total_available_transmit": {},
+  "rp_total_pre": "",
+  "@rp_total_pre": {},
+  "rp_total_pretext": "",
+  "@rp_total_pretext": {},
+  "rp_transmit_desc_1": "当前每份（{hynPerRP} HYN）总共可传导出 ",
+  "@rp_transmit_desc_1": {},
+  "rp_transmit_desc_2": " RP，分{releaseDay}天释放。{stakingDay}天后可取回已抵押的HYN。",
+  "@rp_transmit_desc_2": {},
+  "rp_transmit_detail": "",
+  "@rp_transmit_detail": {},
   "rp_transmit_pool": "",
   "@rp_transmit_pool": {},
   "rp_transmit_yesterday": "",
   "@rp_transmit_yesterday": {},
+  "rp_worth": "",
+  "@rp_worth": {},
   "rp_yesterday_rp": "",
   "@rp_yesterday_rp": {},
   "safety_certification_by_organizations": "권위 기구의 안전 인증을 받았습니다.",
@@ -2526,6 +2612,8 @@
   "@ten_thousand_annualizedyield": {},
   "terminate_node": "Suspend node",
   "@terminate_node": {},
+  "the_day_before_yesterday": "",
+  "@the_day_before_yesterday": {},
   "this_atlas_node_is_inactive": "该Atlas节点处于非活跃状态",
   "@this_atlas_node_is_inactive": {},
   "throughout_of_day": "하루 종일 (24시간)",
@@ -2540,6 +2628,8 @@
   "@titan_encrypted_map_ecology": {},
   "to_be_confirmed": "확인중",
   "@to_be_confirmed": {},
+  "today": "",
+  "@today": {},
   "today_join": "금일 가입",
   "@today_join": {},
   "toilet": "화장실",
@@ -2798,6 +2888,8 @@
   "@wrong_answer": {},
   "wrong_check_record": "잘못된 인증 기록",
   "@wrong_check_record": {},
+  "yesterday": "",
+  "@yesterday": {},
   "you": "You",
   "@you": {},
   "you_create_or_join_node": "You initiated or delegated {num}Map3 nodes in total",
