--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -118,6 +118,8 @@
   "@already_collected_hint": {},
   "already_imported_hint": "已导入",
   "@already_imported_hint": {},
+  "already_your_friend_cannot_be_referrer": "对方已经是你的好友，不能成为你的推荐人",
+  "@already_your_friend_cannot_be_referrer": {},
   "amazon_cloud": "亚马逊云",
   "@amazon_cloud": {},
   "amount": "金额",
@@ -574,6 +576,8 @@
   "@depth_decimal_places": {},
   "description": "描述",
   "@description": {},
+  "description_has_gap": "描   述",
+  "@description_has_gap": {},
   "detail": "详情",
   "@detail": {},
   "detail_create_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
@@ -1210,7 +1214,7 @@
   "@invitation_success": {},
   "invite_friend_join": "邀请好友\n参加",
   "@invite_friend_join": {},
-  "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否同意?",
+  "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否接受邀请?",
   "@invite_friend_receive_pocket_agree": {},
   "invite_friends": "邀请好友",
   "@invite_friends": {},
@@ -1244,6 +1248,8 @@
   "@join_map_node_must_have_block_account": {},
   "kais_talk": "凯氏物语",
   "@kais_talk": {},
+  "key_accept": "接受",
+  "@key_accept": {},
   "key_manager_title": "我的加密地址",
   "@key_manager_title": {},
   "key_pair_error_share_location_again": "密钥对异常，请重新进行位置分享操作",
@@ -2216,10 +2222,16 @@
   "@route": {},
   "rp_airdrop": "红包空投",
   "@rp_airdrop": {},
+  "rp_already_stake": "已抵押",
+  "@rp_already_stake": {},
+  "rp_amount_unit": "份",
+  "@rp_amount_unit": {},
   "rp_available_soon": "即将上线",
   "@rp_available_soon": {},
   "rp_balance": "余额",
   "@rp_balance": {},
+  "rp_check_staking_tx": "查看抵押交易",
+  "@rp_check_staking_tx": {},
   "rp_desc_1": "首个基于可信地图位置+HRC30去中心化交易结构的去中心化应用场景",
   "@rp_desc_1": {},
   "rp_desc_2": "用户只需抵押HYN即可体验去中心化抢红包，与朋友圈共同分享RP",
@@ -2228,6 +2240,8 @@
   "@rp_desc_3": {},
   "rp_desc_4": "RP总发行量为100万枚，在红包HRC30智能合约内进行传导和空投，无预挖，无预售。",
   "@rp_desc_4": {},
+  "rp_empty_staking_record": "抵押记录为空",
+  "@rp_empty_staking_record": {},
   "rp_friends": "朋友圈",
   "@rp_friends": {},
   "rp_global_hyn_staking": "全网抵押",
@@ -2236,32 +2250,104 @@
   "@rp_global_transmit": {},
   "rp_hrc30": "红包 HRC30",
   "@rp_hrc30": {},
+  "rp_hyn_can_retrieved": "可提回",
+  "@rp_hyn_can_retrieved": {},
+  "rp_hyn_locked_hint": "注：你的HYN抵押将锁定{stakingDay}天，满期后可自行取回",
+  "@rp_hyn_locked_hint": {},
+  "rp_input_staking_amount": "请输入抵押份数",
+  "@rp_input_staking_amount": {},
+  "rp_input_staking_amount_with_hyn": "输入抵押份数，每份{hynPerRp} HYN",
+  "@rp_input_staking_amount_with_hyn": {},
   "rp_invite_me": "邀请我",
   "@rp_invite_me": {},
   "rp_invite_to_collect": "邀请好友一起领红包",
   "@rp_invite_to_collect": {},
+  "rp_million_rp": "万RP",
+  "@rp_million_rp": {},
   "rp_missed": "我错过的",
   "@rp_missed": {},
   "rp_my_hyn_staking": "我的抵押",
   "@rp_my_hyn_staking": {},
   "rp_my_invite_list": "我邀请的好友",
   "@rp_my_invite_list": {},
+  "rp_my_total_transmit": "我累计获得",
+  "@rp_my_total_transmit": {},
+  "rp_my_yesterday_transmit": "我昨日获得",
+  "@rp_my_yesterday_transmit": {},
   "rp_not_airdrop_1": "未",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "空",
   "@rp_not_airdrop_2": {},
   "rp_not_airdrop_3": "投",
   "@rp_not_airdrop_3": {},
+  "rp_not_enough_hyn": "钱包的HYN余额不足购买当前份数",
+  "@rp_not_enough_hyn": {},
+  "rp_no_valid_contract": "当前没有到期的抵押合约",
+  "@rp_no_valid_contract": {},
   "rp_project_intro": "项目简介",
   "@rp_project_intro": {},
+  "rp_retrieve_all_staking": "取回所有满期抵押",
+  "@rp_retrieve_all_staking": {},
+  "rp_retrieve_all_staking_confirm": "当前满期HYN有{count} 笔，总共 {hynSum} HYN，你将发起提回抵押操作，确定继续吗？",
+  "@rp_retrieve_all_staking_confirm": {},
+  "rp_retrieve_staking_request_success": "取回请求已发送成功，请稍后查看钱包HYN余额！",
+  "@rp_retrieve_staking_request_success": {},
+  "rp_retrive_hyn": "一键取回",
+  "@rp_retrive_hyn": {},
+  "rp_stake": "抵押",
+  "@rp_stake": {},
+  "rp_stake_hyn": "抵押HYN",
+  "@rp_stake_hyn": {},
+  "rp_staking_amount": "抵押份数",
+  "@rp_staking_amount": {},
+  "rp_staking_days": "第 {day} 天",
+  "@rp_staking_days": {},
+  "rp_staking_detail": "抵押详情",
+  "@rp_staking_detail": {},
+  "rp_staking_end_time": "到期时间",
+  "@rp_staking_end_time": {},
+  "rp_staking_id": "抵押ID",
+  "@rp_staking_id": {},
+  "rp_staking_start_time": "抵押时间",
+  "@rp_staking_start_time": {},
+  "rp_staking_state_1": "抵押确认中...",
+  "@rp_staking_state_1": {},
+  "rp_staking_state_2": "失败",
+  "@rp_staking_state_2": {},
+  "rp_staking_state_3": "运行中",
+  "@rp_staking_state_3": {},
+  "rp_staking_state_4": "释放中...",
+  "@rp_staking_state_4": {},
+  "rp_staking_state_5": "释放结束",
+  "@rp_staking_state_5": {},
+  "rp_staking_state_6": "可取回",
+  "@rp_staking_state_6": {},
+  "rp_staking_state_7": "取回中...",
+  "@rp_staking_state_7": {},
+  "rp_staking_state_8": "已提取",
+  "@rp_staking_state_8": {},
   "rp_today_rp": "今日红包",
   "@rp_today_rp": {},
   "rp_total_amount_percent": "总量{percent}万RP",
   "@rp_total_amount_percent": {},
+  "rp_total_available_transmit": "总可传导",
+  "@rp_total_available_transmit": {},
+  "rp_total_pre": "累计",
+  "@rp_total_pre": {},
+  "rp_total_pretext": "共",
+  "@rp_total_pretext": {},
+  "rp_transmit_desc_1": "当前每份（{hynPerRP} HYN）总共可传导出 ",
+  "@rp_transmit_desc_1": {},
+  "rp_transmit_desc_2": " RP，分{releaseDay}天释放。{stakingDay}天后可取回已抵押的HYN。",
+  "@rp_transmit_desc_2": {},
+  "rp_transmit_detail": "传导明细",
+  "@rp_transmit_detail": {},
   "rp_transmit_pool": "传导池",
   "@rp_transmit_pool": {},
   "rp_transmit_yesterday": "昨日获得",
   "@rp_transmit_yesterday": {},
+  "rp_worth": "价值",
+  "@rp_worth": {},
   "rp_yesterday_rp": "昨日红包",
   "@rp_yesterday_rp": {},
   "safety_certification_by_organizations": "经过权威机构安全认证",
@@ -2526,6 +2612,8 @@
   "@ten_thousand_annualizedyield": {},
   "terminate_node": "终止节点",
   "@terminate_node": {},
+  "the_day_before_yesterday": "前天",
+  "@the_day_before_yesterday": {},
   "this_atlas_node_is_inactive": "该Atlas节点处于非活跃状态",
   "@this_atlas_node_is_inactive": {},
   "throughout_of_day": "全天（24小时）",
@@ -2540,6 +2628,8 @@
   "@titan_encrypted_map_ecology": {},
   "to_be_confirmed": "待确认",
   "@to_be_confirmed": {},
+  "today": "今天",
+  "@today": {},
   "today_join": "今日加入",
   "@today_join": {},
   "toilet": "厕所",
@@ -2798,6 +2888,8 @@
   "@wrong_answer": {},
   "wrong_check_record": "错误的校验记录",
   "@wrong_check_record": {},
+  "yesterday": "昨天",
+  "@yesterday": {},
   "you": "你",
   "@you": {},
   "you_create_or_join_node": "您一共创建或参与了{num}个Map3节点",
