--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1260,6 +1260,8 @@
   "@kline_24h_low": {},
   "kline_delegate_amount": "数量(HYN)",
   "@kline_delegate_amount": {},
+  "kline_delegate_amount_v2": "数量",
+  "@kline_delegate_amount_v2": {},
   "kline_delegate_buy": "买盘",
   "@kline_delegate_buy": {},
   "kline_delegate_direction": "方向",
@@ -2286,8 +2288,6 @@
   "@rp_no_valid_contract": {},
   "rp_project_intro": "项目简介",
   "@rp_project_intro": {},
-  "rp_retrive_hyn": "",
-  "@rp_retrive_hyn": {},
   "rp_retrieve_all_staking": "取回所有满期抵押",
   "@rp_retrieve_all_staking": {},
   "rp_retrieve_all_staking_confirm": "当前满期HYN有{count} 笔，总共 {hynSum} HYN，你将发起提回抵押操作，确定继续吗？",
