[Update] update translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,7 +14,7 @@
   "@account_error": {},
   "account_exist_direct_login": "Account already exists, login to now",
   "@account_exist_direct_login": {},
-  "account_flow": "contract flow",
+  "account_flow": "Contract flow",
   "@account_flow": {},
   "account_is_empty": "Account is empty",
   "@account_is_empty": {},
@@ -1394,6 +1394,8 @@
   "@map3_collect_doing": {},
   "map3_collect_in_atlas_doing": "Collect reward request pending",
   "@map3_collect_in_atlas_doing": {},
+  "map3_create_at": "Created in",
+  "@map3_create_at": {},
   "map3_create_min_staking": "Create a minimal staking",
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "The amount of Map3 delegation is too low",
@@ -1536,6 +1538,22 @@
   "@map3_setting_epoch_left": {},
   "map3_setting_epoch_need": "Days required before next setting",
   "@map3_setting_epoch_need": {},
+  "map3_status_cancel_ing": "Undo",
+  "@map3_status_cancel_ing": {},
+  "map3_status_cancel_success": "Terminated",
+  "@map3_status_cancel_success": {},
+  "map3_status_create_fail": "Startup Failed",
+  "@map3_status_create_fail": {},
+  "map3_status_creating": "Creating",
+  "@map3_status_creating": {},
+  "map3_status_expired": "Expiring",
+  "@map3_status_expired": {},
+  "map3_status_map": "Mapping",
+  "@map3_status_map": {},
+  "map3_status_pending": "Pending",
+  "@map3_status_pending": {},
+  "map3_status_running": "Running",
+  "@map3_status_running": {},
   "map3_un_re_delegate_doing": "Canceling restaking request pending",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "Execute Map3 contract",
@@ -2244,7 +2262,7 @@
   "@rp_desc_4": {},
   "rp_empty_staking_record": "No record",
   "@rp_empty_staking_record": {},
-  "rp_friends": "Moments",
+  "rp_friends": "Friends",
   "@rp_friends": {},
   "rp_global_hyn_staking": "Total staking",
   "@rp_global_hyn_staking": {},
@@ -2330,7 +2348,7 @@
   "@rp_staking_state_8": {},
   "rp_today_rp": "Today's Red Pack",
   "@rp_today_rp": {},
-  "rp_total_amount_percent": "Total{percent}K RP",
+  "rp_total_amount_percent": "Total{percent}0K RP",
   "@rp_total_amount_percent": {},
   "rp_total_available_transmit": "Totally available redeem",
   "@rp_total_available_transmit": {},
@@ -2344,7 +2362,7 @@
   "@rp_transmit_desc_2": {},
   "rp_transmit_detail": "Redeem details",
   "@rp_transmit_detail": {},
-  "rp_transmit_pool": "RP are kept for HYN swap",
+  "rp_transmit_pool": "RP swap pool",
   "@rp_transmit_pool": {},
   "rp_transmit_yesterday": "Yesterday gained",
   "@rp_transmit_yesterday": {},
@@ -2622,7 +2640,7 @@
   "@throughout_of_day": {},
   "time": "Opening times",
   "@time": {},
-  "time_left": "time left",
+  "time_left": "Time left",
   "@time_left": {},
   "tips": "Tips",
   "@tips": {},
