--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1394,6 +1394,8 @@
   "@map3_collect_doing": {},
   "map3_collect_in_atlas_doing": "提取Atlas奖励请求处理中...",
   "@map3_collect_in_atlas_doing": {},
+  "map3_create_at": "에서 생성됨",
+  "@map3_create_at": {},
   "map3_create_min_staking": "Create a minimal staking",
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "Map3创建者抵押金额太低",
@@ -1536,6 +1538,22 @@
   "@map3_setting_epoch_left": {},
   "map3_setting_epoch_need": "距离可设置还需",
   "@map3_setting_epoch_need": {},
+  "map3_status_cancel_ing": "실행 취소",
+  "@map3_status_cancel_ing": {},
+  "map3_status_cancel_success": "종료됨",
+  "@map3_status_cancel_success": {},
+  "map3_status_create_fail": "시작 실패",
+  "@map3_status_create_fail": {},
+  "map3_status_creating": "창조",
+  "@map3_status_creating": {},
+  "map3_status_expired": "만료",
+  "@map3_status_expired": {},
+  "map3_status_map": "지도에",
+  "@map3_status_map": {},
+  "map3_status_pending": "시작하려면",
+  "@map3_status_pending": {},
+  "map3_status_running": "작동 중",
+  "@map3_status_running": {},
   "map3_un_re_delegate_doing": "상환 요청 처리 취소...",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "MAP3 계약 전용",
