--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1394,6 +1394,8 @@
   "@map3_collect_doing": {},
   "map3_collect_in_atlas_doing": "提取Atlas獎勵請求處理中...",
   "@map3_collect_in_atlas_doing": {},
+  "map3_create_at": "创建于",
+  "@map3_create_at": {},
   "map3_create_min_staking": "创建最低抵押",
   "@map3_create_min_staking": {},
   "map3_creator_delegation_too_small": "Map3創建者抵押金額太低",
@@ -1536,6 +1538,22 @@
   "@map3_setting_epoch_left": {},
   "map3_setting_epoch_need": "距離可設置還需",
   "@map3_setting_epoch_need": {},
+  "map3_status_cancel_ing": "撤销中",
+  "@map3_status_cancel_ing": {},
+  "map3_status_cancel_success": "已终止",
+  "@map3_status_cancel_success": {},
+  "map3_status_create_fail": "启动失败",
+  "@map3_status_create_fail": {},
+  "map3_status_creating": "创建中",
+  "@map3_status_creating": {},
+  "map3_status_expired": "已到期",
+  "@map3_status_expired": {},
+  "map3_status_map": "映射中",
+  "@map3_status_map": {},
+  "map3_status_pending": "待启动",
+  "@map3_status_pending": {},
+  "map3_status_running": "运行中",
+  "@map3_status_running": {},
   "map3_un_re_delegate_doing": "取消复抵押請求處理中...",
   "@map3_un_re_delegate_doing": {},
   "map_contract_execution": "MAP3合約調用",
