--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1212,6 +1212,8 @@
   "@invitation_code_error": {},
   "invitation_success": "邀请成功",
   "@invitation_success": {},
+  "invite_come_receive_red_pocket": "“\"”<p><span style='color: #333333;'>하이베르니언 칼라<span style='color: #ff3b3b;'>레드 팩에</span>여러분을 초대하세요</span><span style='color: #333333;'>!</span></p>“ “”",
+  "@invite_come_receive_red_pocket": {},
   "invite_friend_join": "참가할 친구 초대",
   "@invite_friend_join": {},
   "invite_friend_receive_pocket_agree": "邀请你成为他的好友并一起领红包，是否接受邀请?",
