update invite ui

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1212,7 +1212,7 @@
   "@invitation_code_error": {},
   "invitation_success": "Invited successfully",
   "@invitation_success": {},
-  "invite_come_receive_red_pocket": "“\"”<p><span style='color: #333333;'>Invite you to a Hyperion collar</span><span style='color: #ff3b3b;'>red pack</span><span style='color: #333333;'>!</span></p>“ \"”",
+  "invite_come_receive_red_pocket": "<p><span style='color: #333333;'>邀请你一起来海伯利安领</span><span style='color: #ff3b3b;'>红包</span><span style='color: #333333;'>啦!</span></p>",
   "@invite_come_receive_red_pocket": {},
   "invite_friend_join": "Invite friends to join",
   "@invite_friend_join": {},
