--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1212,7 +1212,7 @@
   "@invitation_code_error": {},
   "invitation_success": "邀請成功",
   "@invitation_success": {},
-  "invite_come_receive_red_pocket": "\"\"\"<p><span style='color: #333333;'>邀请你一起来海伯利安领</span><span style='color: #ff3b3b;'>红包</span><span style='color: #333333;'>啦!</span></p>\"\"\"",
+  "invite_come_receive_red_pocket": "<p><span style='color: #333333;'>邀请你一起来海伯利安领</span><span style='color: #ff3b3b;'>红包</span><span style='color: #333333;'>啦!</span></p>",
   "@invite_come_receive_red_pocket": {},
   "invite_friend_join": "邀請好友\n參加",
   "@invite_friend_join": {},
@@ -2348,6 +2348,8 @@
   "@rp_staking_state_7": {},
   "rp_staking_state_8": "已提取",
   "@rp_staking_state_8": {},
+  "rp_swap_pool_transmit_func": "<p>\n 前每份（<span>{hynPerRp}</span> HYN）总共可传导出<span>{baseRp}</span> RP，分<span>{releaseDay}</span> 天释放。<span>{stakingDay}</span>天后可取回已抵押的HYN。\n </p>",
+  "@rp_swap_pool_transmit_func": {},
   "rp_today_rp": "今日紅包",
   "@rp_today_rp": {},
   "rp_total_amount_percent": "總量{percent}萬RP",
