--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -2366,6 +2366,8 @@
   "@rp_transmit_desc_2": {},
   "rp_transmit_detail": "传导明细",
   "@rp_transmit_detail": {},
+  "rp_transmit_input_hint": "请输入有效份数",
+  "@rp_transmit_input_hint": {},
   "rp_transmit_pool": "传导池",
   "@rp_transmit_pool": {},
   "rp_transmit_yesterday": "昨日获得",
