[open] open rp exchange

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2348,7 +2348,7 @@
   "@rp_staking_state_7": {},
   "rp_staking_state_8": "Withdraw",
   "@rp_staking_state_8": {},
-  "rp_swap_pool_transmit_func": "<p>\n    前每份（<span>{hynPerRp}</span> HYN）总共可传导出<span>{baseRp}</span> RP，分<span>{releaseDay}</span> 天释放。<span>{stakingDay}</span>天后可取回已抵押的HYN。\n    </p>",
+  "rp_swap_pool_transmit_func": "<p>\n    当前每份（<span>{hynPerRp}</span> HYN）总共可传导出<span>{baseRp}</span> RP，分<span>{releaseDay}</span> 天释放。<span>{stakingDay}</span>天后可取回已抵押的HYN。\n    </p>",
   "@rp_swap_pool_transmit_func": {},
   "rp_today_rp": "Today's Red Pack",
   "@rp_today_rp": {},
