[exchange]: update 24H vol

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -702,8 +702,10 @@
   "@exceed_the_limit": {},
   "exchange": "Swap",
   "@exchange": {},
-  "exchange_24h_amount": "24H Volume",
+  "exchange_24h_amount": "24H Amount",
   "@exchange_24h_amount": {},
+  "exchange_24h_vol": "24H",
+  "@exchange_24h_vol": {},
   "exchange_account": "Swap account",
   "@exchange_account": {},
   "exchange_account_balance": "Balance",
