--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -702,8 +702,10 @@
   "@exceed_the_limit": {},
   "exchange": "거래",
   "@exchange": {},
-  "exchange_24h_amount": "24시간 수량",
+  "exchange_24h_amount": "24H Amount",
   "@exchange_24h_amount": {},
+  "exchange_24h_vol": "24H",
+  "@exchange_24h_vol": {},
   "exchange_account": "거래 계정",
   "@exchange_account": {},
   "exchange_account_balance": "계정 잔액",
