--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -704,6 +704,8 @@
   "@exchange": {},
   "exchange_24h_amount": "24H量",
   "@exchange_24h_amount": {},
+  "exchange_24h_vol": "24H",
+  "@exchange_24h_vol": {},
   "exchange_account": "交易账户",
   "@exchange_account": {},
   "exchange_account_balance": "账户余额",
