【update】update rp withdraw logic

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1262,6 +1262,8 @@
   "@kline_24h_high": {},
   "kline_24h_low": "낮음",
   "@kline_24h_low": {},
+  "k_line_amount_func": "수량 ({amount})",
+  "@k_line_amount_func": {},
   "kline_delegate_amount": "금액 (HYN)",
   "@kline_delegate_amount": {},
   "kline_delegate_amount_v2": "금액",
@@ -1312,6 +1314,8 @@
   "@kline_period_min": {},
   "kline_period_more": "더보기",
   "@kline_period_more": {},
+  "k_line_price_func": "가격 ({price})",
+  "@k_line_price_func": {},
   "kline_state_main": "기본 사진",
   "@kline_state_main": {},
   "kline_state_secondary": "보조 사진",
