--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1262,6 +1262,8 @@
   "@kline_24h_high": {},
   "kline_24h_low": "Low",
   "@kline_24h_low": {},
+  "k_line_amount_func": "Quantity ({amount})",
+  "@k_line_amount_func": {},
   "kline_delegate_amount": "Amount (HYN)",
   "@kline_delegate_amount": {},
   "kline_delegate_amount_v2": "amount",
@@ -1312,6 +1314,8 @@
   "@kline_period_min": {},
   "kline_period_more": "More",
   "@kline_period_more": {},
+  "k_line_price_func": "Price ({price})",
+  "@k_line_price_func": {},
   "kline_state_main": "Main",
   "@kline_state_main": {},
   "kline_state_secondary": "2nd",
