--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1262,6 +1262,8 @@
   "@kline_24h_high": {},
   "kline_24h_low": "低",
   "@kline_24h_low": {},
+  "k_line_amount_func": "数量({amount})",
+  "@k_line_amount_func": {},
   "kline_delegate_amount": "数量(HYN)",
   "@kline_delegate_amount": {},
   "kline_delegate_amount_v2": "数量",
@@ -1312,6 +1314,8 @@
   "@kline_period_min": {},
   "kline_period_more": "更多",
   "@kline_period_more": {},
+  "k_line_price_func": "价格({price})",
+  "@k_line_price_func": {},
   "kline_state_main": "主图",
   "@kline_state_main": {},
   "kline_state_secondary": "副图",
