update transfer dialog

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2878,7 +2878,7 @@
   "@wallet_test": {},
   "wallet_transaction_finish_tips": "Unable to cancel the transaction request。",
   "@wallet_transaction_finish_tips": {},
-  "wallet_transfer_title": "There’s an unconfirmed transfer. If continue, the existing transfer request will be cancelled.",
+  "wallet_transfer_title": "你有未确认的交易，请等待原交易成功后再发起新的交易。",
   "@wallet_transfer_title": {},
   "wallet_translation_finish_not_speed_tips": "Unable to speed up for current transaction.",
   "@wallet_translation_finish_not_speed_tips": {},
