[update] update invite ui

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1214,7 +1214,7 @@
   "@invitation_code_error": {},
   "invitation_success": "邀请成功",
   "@invitation_success": {},
-  "invite_come_receive_red_pocket": "<p><span style='color: #333333;'>邀请你一起来海伯利安领</span><span style='color: #ff3b3b;'>红包</span><span style='color: #333333;'>啦!</span></p>",
+  "invite_come_receive_red_pocket": "<p><span style='color: #333333;'>邀请你一起来海伯利安</span><span style='color: #ff3b3b;'>领红包</span><span style='color: #333333;'>啦!</span></p>",
   "@invite_come_receive_red_pocket": {},
   "invite_friend_join": "참가할 친구 초대",
   "@invite_friend_join": {},
