[rp-airdrop]: update translation

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1364,6 +1364,8 @@
   "@limit_price": {},
   "load_failed_click_retry": "로드 실패, 다시 클릭하세요",
   "@load_failed_click_retry": {},
+  "loading": "加载中",
+  "@loading": {},
   "location_on_the_map": "지도 위치",
   "@location_on_the_map": {},
   "lodging": "호텔",
@@ -2250,6 +2252,10 @@
   "@route": {},
   "rp_airdrop": "红包空投",
   "@rp_airdrop": {},
+  "rp_airdropping": "正在空投中",
+  "@rp_airdropping": {},
+  "rp_already_airdropped": "已产生(RP)",
+  "@rp_already_airdropped": {},
   "rp_already_stake": "모기지",
   "@rp_already_stake": {},
   "rp_amount_unit": "인분",
@@ -2260,6 +2266,10 @@
   "@rp_balance": {},
   "rp_check_staking_tx": "모기지 거래 조회",
   "@rp_check_staking_tx": {},
+  "rp_current_round_airdropped": "本轮已空投",
+  "@rp_current_round_airdropped": {},
+  "rp_current_round_remain_time": "本轮剩余时间",
+  "@rp_current_round_remain_time": {},
   "rp_desc_1": "首个基于可信地图位置+HRC30去中心化交易结构的去中心化应用场景",
   "@rp_desc_1": {},
   "rp_desc_2": "用户只需抵押HYN即可体验去中心化抢红包，与朋友圈共同分享RP",
@@ -2290,10 +2300,18 @@
   "@rp_invite_me": {},
   "rp_invite_to_collect": "邀请好友一起领红包",
   "@rp_invite_to_collect": {},
+  "rp_latest_round": "最近一轮",
+  "@rp_latest_round": {},
+  "rp_lucky_pocket": "幸运红包",
+  "@rp_lucky_pocket": {},
   "rp_million_rp": "완앤RP",
   "@rp_million_rp": {},
   "rp_missed": "내가 놓친",
   "@rp_missed": {},
+  "rp_my_airdrop_detail_1": "빨간 봉투",
+  "@rp_my_airdrop_detail_1": {},
+  "rp_my_airdrop_detail_2": "개, 총",
+  "@rp_my_airdrop_detail_2": {},
   "rp_my_hyn_staking": "我的抵押",
   "@rp_my_hyn_staking": {},
   "rp_my_invite_list": "내가 초대하는 친구",
@@ -2302,6 +2320,10 @@
   "@rp_my_total_transmit": {},
   "rp_my_yesterday_transmit": "나는 어제 얻었다.",
   "@rp_my_yesterday_transmit": {},
+  "rp_next_round": "下一轮",
+  "@rp_next_round": {},
+  "rp_next_round_estimate": "下轮估计",
+  "@rp_next_round_estimate": {},
   "rp_not_airdrop_1": "未",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "空",
@@ -2314,6 +2336,8 @@
   "@rp_no_valid_contract": {},
   "rp_project_intro": "项目简介",
   "@rp_project_intro": {},
+  "rp_red_pocket": "红包",
+  "@rp_red_pocket": {},
   "rp_retrieve_all_staking": "만료 된 모든 모기지를 검색",
   "@rp_retrieve_all_staking": {},
   "rp_retrieve_all_staking_confirm": "当前满期HYN有{count} 笔，总共 {hynSum} HYN，你将发起提回抵押操作，确定继续吗？",
@@ -2358,6 +2382,8 @@
   "@rp_swap_pool_transmit_func": {},
   "rp_today_rp": "今日红包",
   "@rp_today_rp": {},
+  "rp_to_join_airdrop": "参与领红包",
+  "@rp_to_join_airdrop": {},
   "rp_total_amount_percent": "总量(RP): {percent}万",
   "@rp_total_amount_percent": {},
   "rp_total_available_transmit": "총 전선식",
