--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1364,6 +1364,8 @@
   "@limit_price": {},
   "load_failed_click_retry": "Load failed, click to retry",
   "@load_failed_click_retry": {},
+  "loading": "加载中",
+  "@loading": {},
   "location_on_the_map": "Location on map",
   "@location_on_the_map": {},
   "lodging": "Hotel",
@@ -2250,6 +2252,10 @@
   "@route": {},
   "rp_airdrop": "Airdrop",
   "@rp_airdrop": {},
+  "rp_airdropping": "正在空投中",
+  "@rp_airdropping": {},
+  "rp_already_airdropped": "已产生(RP)",
+  "@rp_already_airdropped": {},
   "rp_already_stake": "Staked",
   "@rp_already_stake": {},
   "rp_amount_unit": "share",
@@ -2260,6 +2266,10 @@
   "@rp_balance": {},
   "rp_check_staking_tx": "Check staking transaction",
   "@rp_check_staking_tx": {},
+  "rp_current_round_airdropped": "本轮已空投",
+  "@rp_current_round_airdropped": {},
+  "rp_current_round_remain_time": "本轮剩余时间",
+  "@rp_current_round_remain_time": {},
   "rp_desc_1": "The first applicable case based on the Atlas on-chain distribution model",
   "@rp_desc_1": {},
   "rp_desc_2": "Stake your HYN to get free Red Pocket and share with your friends",
@@ -2290,10 +2300,18 @@
   "@rp_invite_me": {},
   "rp_invite_to_collect": "Invite your friends",
   "@rp_invite_to_collect": {},
+  "rp_latest_round": "最近一轮",
+  "@rp_latest_round": {},
+  "rp_lucky_pocket": "幸运红包",
+  "@rp_lucky_pocket": {},
   "rp_million_rp": "0K RP",
   "@rp_million_rp": {},
   "rp_missed": "Missed",
   "@rp_missed": {},
+  "rp_my_airdrop_detail_1": "I got",
+  "@rp_my_airdrop_detail_1": {},
+  "rp_my_airdrop_detail_2": "red pockets. Total",
+  "@rp_my_airdrop_detail_2": {},
   "rp_my_hyn_staking": "My delegation",
   "@rp_my_hyn_staking": {},
   "rp_my_invite_list": "The friends I invited",
@@ -2302,6 +2320,10 @@
   "@rp_my_total_transmit": {},
   "rp_my_yesterday_transmit": "Yesterday I gained ",
   "@rp_my_yesterday_transmit": {},
+  "rp_next_round": "下一轮",
+  "@rp_next_round": {},
+  "rp_next_round_estimate": "下轮估计",
+  "@rp_next_round_estimate": {},
   "rp_not_airdrop_1": "not",
   "@rp_not_airdrop_1": {},
   "rp_not_airdrop_2": "airdrop",
@@ -2314,6 +2336,8 @@
   "@rp_no_valid_contract": {},
   "rp_project_intro": "Introduction",
   "@rp_project_intro": {},
+  "rp_red_pocket": "红包",
+  "@rp_red_pocket": {},
   "rp_retrieve_all_staking": "Retrieve all expired staking",
   "@rp_retrieve_all_staking": {},
   "rp_retrieve_all_staking_confirm": "当前满期HYN有{count} 笔，总共 {hynSum} HYN，你将发起提回抵押操作，确定继续吗？",
@@ -2358,6 +2382,8 @@
   "@rp_swap_pool_transmit_func": {},
   "rp_today_rp": "Today's Red Pack",
   "@rp_today_rp": {},
+  "rp_to_join_airdrop": "参与领红包",
+  "@rp_to_join_airdrop": {},
   "rp_total_amount_percent": "Total(RP): {percent}0K ",
   "@rp_total_amount_percent": {},
   "rp_total_available_transmit": "Totally available redeem",
