[Update] update me page ui

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -132,7 +132,7 @@
   "@annualized_rewards": {},
   "another": "换一个",
   "@another": {},
-  "app_area_setting": "区域",
+  "app_area_setting": "使用区域",
   "@app_area_setting": {},
   "app_name": "泰坦地图",
   "@app_name": {},
@@ -1328,7 +1328,7 @@
   "@km": {},
   "label": "标签",
   "@label": {},
-  "language": "语言",
+  "language": "多语言",
   "@language": {},
   "lastest_launched_nodes": "最新节点",
   "@lastest_launched_nodes": {},
@@ -2112,7 +2112,7 @@
   "@price": {},
   "price_market": "价格({market})",
   "@price_market": {},
-  "price_show": "价格显示",
+  "price_show": "货币单位",
   "@price_show": {},
   "private_and_safety": "私密和安全",
   "@private_and_safety": {},
