[Add] add checkIn

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -516,6 +516,8 @@
   "@current_commission": {},
   "current_management_fee": "Current commission",
   "@current_management_fee": {},
+  "current_related_child_account": "",
+  "@current_related_child_account": {},
   "current_reward": "Current reward",
   "@current_reward": {},
   "current_reward_zero": "Current reward is Null!",
@@ -1362,6 +1364,8 @@
   "@less_than_1_min": {},
   "limit_price": "Limit Price",
   "@limit_price": {},
+  "linked_account": "Account Associations",
+  "@linked_account": {},
   "load_failed_click_retry": "Load failed, click to retry",
   "@load_failed_click_retry": {},
   "loading": "加载中",
@@ -2146,6 +2150,10 @@
   "@punch_card_completed_came_tomorrow": {},
   "qrcode": "QR Code",
   "@qrcode": {},
+  "ralated_info_content": "For the convenience of subaccounts completing the card task, as long as the main account completes playing, the subaccount also automatically completes the card task.A master account can be associated with up to 10 subaccounts.",
+  "@ralated_info_content": {},
+  "ralated_info_title": "What is a task account association",
+  "@ralated_info_title": {},
   "random_number": "Random number",
   "@random_number": {},
   "reactivate": "Reinitiate",
@@ -2200,6 +2208,20 @@
   "@regulation_title": {},
   "reinput_wallet_password_label": "Confirm Wallet Password",
   "@reinput_wallet_password_label": {},
+  "related_cancel_child_content": "确定取消关联子账户{email}吗？",
+  "@related_cancel_child_content": {},
+  "related_cancel_main_content": "确定取消关联主账户{email}吗？",
+  "@related_cancel_main_content": {},
+  "related_cancel_related_title": "Unlink Account",
+  "@related_cancel_related_title": {},
+  "related_children_count": "（{length}个）",
+  "@related_children_count": {},
+  "related_ok": "OK",
+  "@related_ok": {},
+  "related_setting_title": "Set up the main account",
+  "@related_setting_title": {},
+  "related_text_field_hint": "Enter main account email",
+  "@related_text_field_hint": {},
   "remain": "left",
   "@remain": {},
   "remain_day": "{remain}days",
@@ -2656,6 +2678,8 @@
   "@task_is_not_finish": {},
   "task_pending": "Pending",
   "@task_pending": {},
+  "task_related_account": "Task Account Associations",
+  "@task_related_account": {},
   "telegram": "Telegram",
   "@telegram": {},
   "telegram_operator": "Telegram Operator",
@@ -2670,6 +2694,8 @@
   "@ten_thousand_annualizedyield": {},
   "terminate_node": "Suspend node",
   "@terminate_node": {},
+  "thank_you_for_contribute_data": "Thank you for contributing data.",
+  "@thank_you_for_contribute_data": {},
   "the_day_before_yesterday": "The day before yesterday",
   "@the_day_before_yesterday": {},
   "this_atlas_node_is_inactive": "Inactive Atlas node",
