[Add] add checkIn

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -2674,12 +2674,16 @@
   "@task_failed": {},
   "task_finished": "处理完成",
   "@task_finished": {},
+  "task_is_finished_func": "{todayTimes}/{times}次，已完成",
+  "@task_is_finished_func": {},
   "task_is_not_finish": "任务未达标!",
   "@task_is_not_finish": {},
   "task_pending": "待处理中",
   "@task_pending": {},
   "task_related_account": "任务账户关联",
   "@task_related_account": {},
+  "task_un_finished_func": "{todayTimes}/{times}次，未完成",
+  "@task_un_finished_func": {},
   "telegram": "电报群",
   "@telegram": {},
   "telegram_operator": "Telegram Operator",
