--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2674,12 +2674,16 @@
   "@task_failed": {},
   "task_finished": "Task completed",
   "@task_finished": {},
+  "task_is_finished_func": "{todayTimes}/{times}次，已完成",
+  "@task_is_finished_func": {},
   "task_is_not_finish": "Task incomplete!",
   "@task_is_not_finish": {},
   "task_pending": "Pending",
   "@task_pending": {},
   "task_related_account": "Task Account Associations",
   "@task_related_account": {},
+  "task_un_finished_func": "{todayTimes}/{times}次，未完成",
+  "@task_un_finished_func": {},
   "telegram": "Telegram",
   "@telegram": {},
   "telegram_operator": "Telegram Operator",
