--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -2674,12 +2674,16 @@
   "@task_failed": {},
   "task_finished": "임무 완성",
   "@task_finished": {},
+  "task_is_finished_func": "{todayTimes}/{times}次，已完成",
+  "@task_is_finished_func": {},
   "task_is_not_finish": "미션 미 완성",
   "@task_is_not_finish": {},
   "task_pending": "처리중입니다.",
   "@task_pending": {},
   "task_related_account": "태스크 계정 연결",
   "@task_related_account": {},
+  "task_un_finished_func": "{todayTimes}/{times}次，未完成",
+  "@task_un_finished_func": {},
   "telegram": "텔레그램",
   "@telegram": {},
   "telegram_operator": "텔레그램 운영자",
