【update】update map contributions

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2674,7 +2674,7 @@
   "@task_failed": {},
   "task_finished": "Task completed",
   "@task_finished": {},
-  "task_is_finished_func": "{todayTimes}/{times}次，已完成",
+  "task_is_finished_func": "{todayTimes}/{times}次",
   "@task_is_finished_func": {},
   "task_is_not_finish": "Task incomplete!",
   "@task_is_not_finish": {},
@@ -2682,8 +2682,6 @@
   "@task_pending": {},
   "task_related_account": "Task Account Associations",
   "@task_related_account": {},
-  "task_un_finished_func": "{todayTimes}/{times}次，未完成",
-  "@task_un_finished_func": {},
   "telegram": "Telegram",
   "@telegram": {},
   "telegram_operator": "Telegram Operator",
