--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -2674,7 +2674,7 @@
   "@task_failed": {},
   "task_finished": "임무 완성",
   "@task_finished": {},
-  "task_is_finished_func": "{todayTimes}/{times}次，已完成",
+  "task_is_finished_func": "{todayTimes}/{times}次",
   "@task_is_finished_func": {},
   "task_is_not_finish": "미션 미 완성",
   "@task_is_not_finish": {},
@@ -2682,8 +2682,6 @@
   "@task_pending": {},
   "task_related_account": "태스크 계정 연결",
   "@task_related_account": {},
-  "task_un_finished_func": "{todayTimes}/{times}次，未完成",
-  "@task_un_finished_func": {},
   "telegram": "텔레그램",
   "@telegram": {},
   "telegram_operator": "텔레그램 운영자",
