[update] update account bind address

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2220,7 +2220,7 @@
   "@related_ok": {},
   "related_setting_title": "Set up the main account",
   "@related_setting_title": {},
-  "related_text_field_hint": "Enter main account email",
+  "related_text_field_hint": "Enter the main account HYN address",
   "@related_text_field_hint": {},
   "remain": "left",
   "@remain": {},
