--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -2220,7 +2220,7 @@
   "@related_ok": {},
   "related_setting_title": "기본 계정 설정",
   "@related_setting_title": {},
-  "related_text_field_hint": "기본 계정 이메일 입력",
+  "related_text_field_hint": "메인 계정 HYN 주소를 입력",
   "@related_text_field_hint": {},
   "remain": "유지",
   "@remain": {},
