--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -2220,7 +2220,7 @@
   "@related_ok": {},
   "related_setting_title": "设置主账户",
   "@related_setting_title": {},
-  "related_text_field_hint": "输入主账户email",
+  "related_text_field_hint": "输入主账户HYN地址",
   "@related_text_field_hint": {},
   "remain": "还差",
   "@remain": {},
