[Update] update translations

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -82,7 +82,7 @@
   "@add_poi_item_title": {},
   "add_position_image_subtitle_2": "（如相邻无商铺，请拍清楚商铺左右环境）",
   "@add_position_image_subtitle_2": {},
-  "add_position_image_title_1": "拍摄时请保证商铺名称清晰完整，并拍全招牌和门脸",
+  "add_position_image_title_1": "拍摄时请保证商铺名称清晰完整，并拍全招牌和门面",
   "@add_position_image_title_1": {},
   "add_position_image_title_2": "拍摄时请拍清楚商铺的左右相邻商铺",
   "@add_position_image_title_2": {},
