--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -82,7 +82,7 @@
   "@add_poi_item_title": {},
   "add_position_image_subtitle_2": "（如相鄰無商鋪，請拍清楚商鋪左右環境）",
   "@add_position_image_subtitle_2": {},
-  "add_position_image_title_1": "拍攝時請保證商鋪名稱清晰完整，並拍全招牌和門臉",
+  "add_position_image_title_1": "拍攝時請保證商鋪名稱清晰完整，並拍全招牌和門面",
   "@add_position_image_title_1": {},
   "add_position_image_title_2": "拍攝時請拍清楚商鋪的左右相鄰商鋪",
   "@add_position_image_title_2": {},
