[Add] add translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -346,7 +346,7 @@
   "@cancellation_remortgage_being_processed": {},
   "cancellation_request_being_processed": "Partly cancellation request is processing",
   "@cancellation_request_being_processed": {},
-  "candidate_node": "候选节点",
+  "candidate_node": "candidate node",
   "@candidate_node": {},
   "can_extract": "Available",
   "@can_extract": {},
@@ -2204,7 +2204,7 @@
   "@number_connections_less_than_four": {},
   "num_decimal_places": "{depthIndex}DEC",
   "@num_decimal_places": {},
-  "num_era_before_next_renewal_set": "距离可以设置下期续约还有{leftEpoch}纪元",
+  "num_era_before_next_renewal_set": "{leftEpoch}epochs remains before seeting the next renewal",
   "@num_era_before_next_renewal_set": {},
   "official_announcement": "Announcement",
   "@official_announcement": {},
@@ -2746,22 +2746,32 @@
   "@rp_latest_round": {},
   "rp_level": "RP Level",
   "@rp_level": {},
+  "rp_level_formula": "计算公式",
+  "@rp_level_formula": {},
   "rp_level_record": "Level record",
   "@rp_level_record": {},
+  "rp_level_total_supply_func": "当前已发行 {totalSupplyStr} RP，百分比Y = {promotionSupplyRatioPercent}（{stepPercent}为1梯度）",
+  "@rp_level_total_supply_func": {},
   "rp_level_up": "Promote",
   "@rp_level_up": {},
   "rp_level_up_broadcast_sent": "Level-up request broadcasted",
   "@rp_level_up_broadcast_sent": {},
   "rp_level_up_first": "Please promote your level",
   "@rp_level_up_first": {},
+  "rp_level_upgrade_func": "提升至该量级需燃烧 {burnStr}RP, 增持{holdingStr}RP",
+  "@rp_level_upgrade_func": {},
   "rp_level_up_now": "Promote now",
   "@rp_level_up_now": {},
+  "rp_level_zero_toast": "当前量级为0, 请先提升量级！",
+  "@rp_level_zero_toast": {},
   "rp_lucky_pocket": "Lucky draw",
   "@rp_lucky_pocket": {},
   "rp_million_rp": "0K RP",
   "@rp_million_rp": {},
   "rp_min_holding": "Minimum holding amount",
   "@rp_min_holding": {},
+  "rp_min_holding_abc": "Mini holding",
+  "@rp_min_holding_abc": {},
   "rp_missed": "Missed",
   "@rp_missed": {},
   "rp_my_airdrop_detail_1": "I got",
@@ -2780,6 +2790,8 @@
   "@rp_need_add_amount": {},
   "rp_need_burn_amount": "Required burning amount",
   "@rp_need_burn_amount": {},
+  "rp_need_burn_amount_abc": "Required burning",
+  "@rp_need_burn_amount_abc": {},
   "rp_next_round": "Next round",
   "@rp_next_round": {},
   "rp_next_round_estimate": "Estimated next round",
