--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -2746,22 +2746,32 @@
   "@rp_latest_round": {},
   "rp_level": "量级",
   "@rp_level": {},
+  "rp_level_formula": "计算公式",
+  "@rp_level_formula": {},
   "rp_level_record": "量级记录",
   "@rp_level_record": {},
+  "rp_level_total_supply_func": "当前已发行 {totalSupplyStr} RP，百分比Y = {promotionSupplyRatioPercent}（{stepPercent}为1梯度）",
+  "@rp_level_total_supply_func": {},
   "rp_level_up": "提升量级",
   "@rp_level_up": {},
   "rp_level_up_broadcast_sent": "提升量级请求已广播",
   "@rp_level_up_broadcast_sent": {},
   "rp_level_up_first": "请先提升量级",
   "@rp_level_up_first": {},
+  "rp_level_upgrade_func": "提升至该量级需燃烧 {burnStr}RP, 增持{holdingStr}RP",
+  "@rp_level_upgrade_func": {},
   "rp_level_up_now": "马上提升",
   "@rp_level_up_now": {},
+  "rp_level_zero_toast": "当前量级为0, 请先提升量级！",
+  "@rp_level_zero_toast": {},
   "rp_lucky_pocket": "幸运红包",
   "@rp_lucky_pocket": {},
   "rp_million_rp": "완앤RP",
   "@rp_million_rp": {},
   "rp_min_holding": "最低持币",
   "@rp_min_holding": {},
+  "rp_min_holding_abc": "最低持币",
+  "@rp_min_holding_abc": {},
   "rp_missed": "내가 놓친",
   "@rp_missed": {},
   "rp_my_airdrop_detail_1": "빨간 봉투",
@@ -2780,6 +2790,8 @@
   "@rp_need_add_amount": {},
   "rp_need_burn_amount": "需燃烧量",
   "@rp_need_burn_amount": {},
+  "rp_need_burn_amount_abc": "需燃烧量",
+  "@rp_need_burn_amount_abc": {},
   "rp_next_round": "下一轮",
   "@rp_next_round": {},
   "rp_next_round_estimate": "下轮估计",
