[Add] add translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2746,7 +2746,7 @@
   "@rp_latest_round": {},
   "rp_level": "RP Level",
   "@rp_level": {},
-  "rp_level_formula": "计算公式",
+  "rp_level_formula": "",
   "@rp_level_formula": {},
   "rp_level_record": "Level record",
   "@rp_level_record": {},
@@ -2762,7 +2762,7 @@
   "@rp_level_upgrade_func": {},
   "rp_level_up_now": "Promote now",
   "@rp_level_up_now": {},
-  "rp_level_zero_toast": "当前量级为0, 请先提升量级！",
+  "rp_level_zero_toast": "",
   "@rp_level_zero_toast": {},
   "rp_lucky_pocket": "Lucky draw",
   "@rp_lucky_pocket": {},
@@ -2922,12 +2922,20 @@
   "@rp_transmit_yesterday": {},
   "rp_type_missed": "Miss",
   "@rp_type_missed": {},
+  "rp_upgrade_continue_toast": "",
+  "@rp_upgrade_continue_toast": {},
+  "rp_upgrade_current_func": "当前持币 {currentHoldingStr} RP，燃烧量 {currBurningStr} RP",
+  "@rp_upgrade_current_func": {},
+  "rp_upgrade_detail_func": "(其中：燃烧:{preBurnStr} RP, 持币:{preHoldingStr} RP)",
+  "@rp_upgrade_detail_func": {},
   "rp_upgrade_level_less_then_current": "Please note that you can't promote to a lower level. ",
   "@rp_upgrade_level_less_then_current": {},
   "rp_upgrade_no_recommender_warning": "You didn't set a referral. If you continue to level-up, a user who's above Level D will be randomly assigned as your referral, which we don't recommend. Are you going to level-up?",
   "@rp_upgrade_no_recommender_warning": {},
   "rp_upgrade_or_add_holding": "Promote or add",
   "@rp_upgrade_or_add_holding": {},
+  "rp_upgrade_tips_func": "如果你还没有推荐人，系统将为你随机设定一个量级 {levelName} 以上的账户地址为推荐人",
+  "@rp_upgrade_tips_func": {},
   "rp_worth": "Worth",
   "@rp_worth": {},
   "rp_yesterday_rp": "Yesterday's Red Pack",
