--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -2922,12 +2922,20 @@
   "@rp_transmit_yesterday": {},
   "rp_type_missed": "错过",
   "@rp_type_missed": {},
+  "rp_upgrade_continue_toast": "邀请成功, 继续升级吧！",
+  "@rp_upgrade_continue_toast": {},
+  "rp_upgrade_current_func": "当前持币 {currentHoldingStr} RP，燃烧量 {currBurningStr} RP",
+  "@rp_upgrade_current_func": {},
+  "rp_upgrade_detail_func": "(其中：燃烧:{preBurnStr} RP, 持币:{preHoldingStr} RP)",
+  "@rp_upgrade_detail_func": {},
   "rp_upgrade_level_less_then_current": "升级的量级不能小于当前量级，请重新选择！",
   "@rp_upgrade_level_less_then_current": {},
   "rp_upgrade_no_recommender_warning": "你还没设置推荐人，如果继续升级的话，系统会为你随机设置一个量级D以上的账户作为你的推荐人，我们不推荐此类做法，你确定继续升级吗？",
   "@rp_upgrade_no_recommender_warning": {},
   "rp_upgrade_or_add_holding": "升级/增持",
   "@rp_upgrade_or_add_holding": {},
+  "rp_upgrade_tips_func": "如果你还没有推荐人，系统将为你随机设定一个量级 {levelName} 以上的账户地址为推荐人",
+  "@rp_upgrade_tips_func": {},
   "rp_worth": "价值",
   "@rp_worth": {},
   "rp_yesterday_rp": "昨日红包",
